2013-05-07  James Hunt  <james.hunt@ubuntu.com>

	* util/man/shutdown.8: Specify default action is to bring system
	  down to single-user mode (LP: #1065851).

2013-04-22  James Hunt  <james.hunt@ubuntu.com>

	* Typo and doc changes.

2013-04-17  James Hunt  <james.hunt@ubuntu.com>

	* init/Makefile.am: Build wrap_inotify library and run test_conf
	  via test_conf_preload.sh.
	* init/tests/test_conf.c: Communicate with wrap_inotify library by
	  setting INOTIFY_DISABLE to reliably disable inotify rather than trying
	  to exhaust inotify instances (LP: #1157713).
	* init/tests/test_conf_preload.sh.in: Script to run test_conf within
	  LD_PRELOAD environment.
	* init/tests/wrap_inotify.c: Wrapper library that provides the inotify
	  API and allows test_conf to believe inotify is disabled by
	  conditionally failing all inotify calls, depending on whether
	  INOTIFY_DISABLE is set.

2013-04-02  James Hunt  <james.hunt@ubuntu.com>

	* extra/man/file-event.7: Correct EVENT values in examples.
	* extra/man/upstart-event-bridge.8:
	  - Corrected bridge name.
	  - Explain that blocking semantics of system jobs not retained.

2013-03-28  James Hunt  <james.hunt@ubuntu.com>

	* scripts/upstart-monitor.py: on_button_press_event():
	  Handle path_info being None (LP: #1161098).
	* extra/upstart-event-bridge.c: main():
	  - Handle daemon pidfile as the upstart-event-bridge does.
	  - Write to stdout, not syslog.
	* init/job_process.[ch]: Removed now unused
	  JOB_PROCESS_ERROR_OPENPT_MASTER.

2013-03-25  James Hunt  <james.hunt@ubuntu.com>

	* extra/man/socket-event.7: Correct section number.
	* init/man/init.5: Correct section number.

2013-03-22  James Hunt  <james.hunt@ubuntu.com>

	* scripts/Makefile.am: Added missing entry for
	  man/upstart-monitor.8.

2013-03-22  James Hunt  <james.hunt@ubuntu.com>

	* NEWS: Release 1.8

2013-03-22  James Hunt  <james.hunt@ubuntu.com>

	* scripts/initctl2dot.py:
	  - footer(): Add details of session.